--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ streamlit-chat==0.1.1
 PyMuPDF==1.24.5
 requests==2.32.3
 langchain==0.2.3
-faiss-cpu==1.8.0
 pandas==2.2.2
 pypdf2==3.0.1
 docx
@@ -19,4 +18,5 @@ requests
 starlette==0.37.2
 langchain-google-genai==1.0.6
 sentence-transformers
-faiss-cpu==1.8.0
+docx2txt==0.8
+PyMuPDF==1.20.2
