--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit==1.35.0
 streamlit-chat==0.1.1
-PyMuPDF
-requests==2.32.3
+PyMuPDF==1.24.5
 langchain==0.2.3
 pandas==2.2.2
 pypdf2==3.0.1
