--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ langchain-community==0.2.4
 langchain-google-genai==1.0.6
 sentence-transformers
 docx2txt==0.8
-qdrant-client==1.1.0
+langchain-core==0.2.3
+qdrant-client==1.9.1
 transformers==4.30.2
